[package]
name = "google-analytics-v4-report-flattener-wasm"
version = "0.2.0"
authors = ["Charlie Saunders <charlieasaunders@gmail.com>"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ga-v4-flattener = { git = "https://github.com/C-Saunders/google_analytics_v4_report_flattener" }
serde = "1.0"
serde_json = "1.0"
console_error_panic_hook = "0.1.1"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
